// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: MapToolbar initial state renders filtered states without crashing 1`] = `
<div
  className="map-toolbar"
>
  <section
    className="state-heading"
  >
    <span>
      Florida, Texas
    </span>
    <a
      className="clear"
      onClick={[Function]}
    >
      <svg
        className="cf-icon-svg"
        viewBox="0 0 1000 1200"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm261.8 692.2c19.4 19.6 19.3 51.3-.3 70.7-19.5 19.3-50.9 19.3-70.4 0L499.6 676.6 308 868.1c-19.6 19.4-51.3 19.3-70.7-.3-19.3-19.5-19.3-50.9 0-70.4l191.6-191.5-191.6-191.6c-19.3-19.8-18.9-51.4.9-70.7 19.4-18.9 50.4-18.9 69.8 0l191.6 191.5 191.5-191.5c19.6-19.4 51.3-19.3 70.7.3 19.3 19.5 19.3 50.9 0 70.4L570.3 605.9l191.5 191.5z"
        />
      </svg>
      Clear
    </a>
  </section>
  <section
    className="state-navigation"
  >
    <a
      className="list"
      href="#"
      onClick={[Function]}
    >
      View complaints for filtered states
    </a>
  </section>
</div>
`;

exports[`component: MapToolbar initial state renders without crashing 1`] = `
<div
  className="map-toolbar"
>
  <section
    className="state-heading"
  >
    <span>
      United States of America
    </span>
    <span>
      
    </span>
    
  </section>
  
</div>
`;
